--- a/sass/_compnents.scss
+++ b/sass/_compnents.scss
@@ -1,85 +1,273 @@
 //LOGO
 
-.logo{
-    height: 3.25rem;
-    margin-left: 3rem;
+.logo {
+  height: 3.25rem;
+  margin-left: 3rem;
 }
 
 //Search
- 
-.search{
-    background-color: orangered;
-    flex: 0 0 40%;
+
+.search {
+  flex: 0 0 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__input {
+    width: 90%;
+    font-size: 1.6rem;
+    font-family: inherit;
+    color: inherit;
+
+    border-radius: 100px;
+    border: none;
+    padding: 0.7rem 2rem;
+    background-color: var(--color-grey-light-2);
+    transition: all 0.2s;
+    margin-right: -3.25rem;
+
+    &:focus {
+      width: 100%;
+      outline: none;
+      background-color: var(--color-grey-light-3);
+    }
+  }
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
+  }
+  &__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
+    fill: var(--color-grey-dark-3);
+
+    &:focus {
+      outline: none;
+    }
+    &:active {
+      transform: translateY(2px);
+    }
+  }
+  &__icon {
+    height: 2rem;
+    width: 2rem;
+  }
+}
+
+.user-nav {
+  & {
+    display: flex;
+    cursor: pointer;
+    align-self: stretch;
+    align-items: center;
+    justify-content: center;
+  }
+
+  & > * {
+    padding: 0 2rem;
+    display: flex;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+  & > *:hover {
+    background-color: var(--color-grey-light-3);
+  }
+
+  &__icon-box {
+    position: relative;
+  }
+  &__icon {
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: var(--color-grey-dark-2);
+  }
+  &__notification {
+    background-color: var(--color-primary);
+    border-radius: 50%;
+    height: 1.75rem;
+    width: 1.75rem;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    &__input {
-        width: 90%;
-        font-size: 1.6rem;
-        font-family: inherit;
-        color: inherit;
-        
-        border-radius: 100px;
-        border: none;
-        padding: .7rem 2rem;
-        background-color: var(--color-grey-light-2);
-        transition: all .2s;
-        margin-right: -3.25rem;
-
-        &:focus {
-            width: 100%;
-            outline: none;
-            background-color: var(--color-grey-light-3 );
-        }
-    }
-    &__input:focus + &__button{
-        background-color: var(--color-grey-light-3 );
-    }
-    &__button{
-        border: none;
-        background-color: var(--color-grey-light-2);
-        fill: var(--color-grey-dark-3);
-        
-        &:focus{
-            outline: none;
-           
-        }
-        &:active{
-            transform: translateY(2px);
-        }
-    }
-    &__icon{
-        height: 2rem;
-        width: 2rem;
-    }
-
+    position: absolute;
+    top: 1.5rem;
+    right: 1rem;
+    font-size: 1rem;
+  }
+  &__user {
+    width: 3.75rem;
+    height: 3.75rem;
+    border-radius: 100%;
+  }
+  &__user-name {
+    margin-left: 1rem;
+    font-size: 1.5rem;
+  }
 }
 
-.user-nav{
-    background-color: yellowgreen;
-    & {
-        display: flex;
-        justify-content: space-between;
-       
-    }
+.sidebar-nav {
+  & {
+    list-style: none;
+    font-size: 1.4rem;
+    color: var(--color-grey-light-1);
+    margin-top: 4rem;
+  }
 
-    &__icon-box{
+  &__link:link,
+  &__link:visited {
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 300;
+    color: var(--color-grey-light-1);
+    display: flex;
+    padding: 1rem 3rem;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+  }
+  &__link:active {
+    background-color: var(--color-primary-light);
+  }
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+    margin-inline: 2rem;
+    fill: currentColor;
+  }
+  &__item {
+    position: relative;
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
+  &__item::before {
+    content: "";
+    width: 3px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: scaleY(0);
+    background-color: var(--color-primary);
+    transition: transform 0.2s, width cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+  }
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+}
 
-    }
-    &__icon{
-        height: 2.5rem;
-        width: 2.5rem;
-    
-    }
-    &__notification{
+.search {
+  &__input {
+  }
+}
+.user-nav {
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+  }
+}
 
-    }
-    &__user{
-        width: 3.75rem;
-        border-radius: 100%;
-    }
-    &__user-name{
+.legal {
+  color: var(--color-grey-light-1);
+  font-size: 1.2rem;
+  padding: 1rem;
+  text-align: center;
+}
 
+.gellary {
+  display: flex;
+    &__item{
+        // height: 100%;
     }
+  &__photo {
+    width: 100%; 
+    display: block;
+  }
+}
+
+.overview {
+  display: flex;
+  border-bottom: 1px solid var(--color-grey-light-1);
+  align-items: center;
+
+  &__heading {
+    font-size: 2.5rem;
+    padding: 1.5rem 3rem;
+    font-weight: 300;
+    text-transform: uppercase;
+  }
+
+  &__stars {
+    margin-right: auto;
+    display: flex;
+  }
+  &__location{
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__rating{
+    background-color: var(--color-primary);
+    margin-left: 2.5rem;
+    padding: 0 2rem;
+    color: white;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__rating-average{
+    font-size: 2.25rem;
+    margin-bottom: -3px;
+  }
+  &__rating-count{
+    font-size: 1rem;
+  }
+}
+
+.button-inline {
+  border: none;
+  font-size: inherit;
+  color: var(--color-primary);
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  background-color: transparent;
+  cursor: pointer;
+
+  &:hover {
+    color: var(--color-grey-dark-2);
+  }
+
+  &:focus{
+
+    animation: pulstate 1s infinite;
+  }
+}
+
+@keyframes pulstate {
+  0% {
+    transform: translate(0);
+    box-shadow: 0;
+  }
+  50% {
+    transform: translate(1.05);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    transform: translate(0);
+    box-shadow: 0;
+  }
 }
