--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -13,6 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid var(--color-grey-light-1);
 
 
 }
@@ -20,28 +21,20 @@
 .content{
     
     display: flex;
+
+    height: 60rem;
     
     .sidebar{
-        background-color: var( --color-grey-dark-2);
-        flex: 0 0 18%;
-    }
-    .hotel-view{
-        background-color: blue;
-        flex: 1;
-        background-color: orangered;
-    
-    }
-
-}
-
-.search{
-    &__input{
+        background-color: var( --color-grey-dark-1);
+        flex: 0 0 18%; 
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
     }
-}
-.user-nav{
-    &__icon {
-        width: 2rem;
-        height: 2rem;
+    .hotel-view{ 
+        flex: 1; 
+        background-color: var(--color-grey-light-1);
     }
+
 }
