--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #FF3366;
@@ -27,7 +28,6 @@ body {
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
 }
 
 html {
@@ -203,6 +203,7 @@ html {
   display: flex;
   border-bottom: 1px solid var(--color-grey-light-1);
   align-items: center;
+  background-color: white;
 }
 .overview__heading {
   font-size: 2.5rem;
@@ -255,8 +256,15 @@ html {
 .button-inline:hover {
   color: var(--color-grey-dark-2);
 }
+.button-inline:hover span {
+  margin-left: 1rem;
+}
 .button-inline:focus {
   animation: pulstate 1s infinite;
+}
+.button-inline span {
+  margin-left: 0rem;
+  transition: margin-left 0.2s;
 }
 
 @keyframes pulstate {
@@ -273,9 +281,106 @@ html {
     box-shadow: 0;
   }
 }
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+.list {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  border-block: 1px solid var(--color-grey-light-3);
+  margin-block: 3rem;
+  padding-block: 3rem;
+}
+.list__item {
+  flex: 0 0 50%;
+}
+.list__item::before {
+  content: "";
+  display: inline-block;
+  height: 1rem;
+  width: 1rem;
+  margin-right: 0.7rem;
+  background-color: var(--color-primary);
+  mask-image: url(../img/chevron-thin-right.svg);
+  mask-size: cover;
+}
+
+.recommend {
+  display: flex;
+  color: var(--color-grey-dark-2);
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+}
+.recommend__friends {
+  display: flex;
+  margin-right: 1rem;
+}
+.recommend__photo {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 2px solid white;
+  box-sizing: content-box;
+  margin-right: -10px;
+}
+
+.review {
+  background-color: white;
+  margin-bottom: 3.4rem;
+  padding: 3rem;
+  font-weight: 500;
+  position: relative;
+  overflow: hidden;
+}
+.review__photo {
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 50%;
+}
+.review__user-box {
+  margin-right: auto;
+  margin-left: 1rem;
+}
+.review__user-box .user-name {
+  font-weight: 600;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+}
+.review__user-box .user-date {
+  font-size: 1rem;
+  color: var(--color-grey-dark-2);
+}
+.review__user {
+  display: flex;
+  align-items: center;
+  margin-top: 1rem;
+}
+.review__rating {
+  color: var(--color-primary);
+  font-size: 2rem;
+}
+.review::before {
+  content: "“";
+  line-height: 1;
+  position: absolute;
+  display: inline;
+  top: -2rem;
+  left: -1rem;
+  z-index: 1;
+  font-size: 20rem;
+  color: var(--color-grey-light-2);
+  font-family: sans-serif;
+}
+.review__text {
+  position: relative;
+  z-index: 10;
+}
+
 .container {
   max-width: 120rem;
-  height: 52rem;
   background-color: var(--color-grey-light-1);
   margin: 8rem auto;
 }
@@ -292,7 +397,6 @@ html {
 
 .content {
   display: flex;
-  height: 60rem;
 }
 .content .sidebar {
   background-color: var(--color-grey-dark-1);
@@ -304,6 +408,29 @@ html {
 .content .hotel-view {
   flex: 1;
   background-color: var(--color-grey-light-1);
+}
+
+.detail {
+  display: flex;
+  margin: 3rem;
+  font-size: 1.4rem;
+  color: var(--color-grey-dark-1);
+}
+
+.description {
+  flex: 0 0 60%;
+  background-color: white;
+  margin-right: 3rem;
+  padding: 3rem;
+  font-weight: 500;
+  box-shadow: 1px 4rem 40rem rgba(0, 0, 0, 0.15);
+}
+
+.user-review {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
