--- a/sass/_compnents.scss
+++ b/sass/_compnents.scss
@@ -192,6 +192,7 @@
   display: flex;
   border-bottom: 1px solid var(--color-grey-light-1);
   align-items: center;
+  background-color: white;
 
   &__heading {
     font-size: 2.5rem;
@@ -249,12 +250,20 @@
 
   &:hover {
     color: var(--color-grey-dark-2);
+    & span {
+      margin-left: 1rem;
+    }
   }
 
   &:focus{
 
     animation: pulstate 1s infinite;
   }
+  & span {
+    margin-left: 0rem;
+    transition: margin-left .2s;
+  }
+ 
 }
 
 @keyframes pulstate {
@@ -269,5 +278,110 @@
   100% {
     transform: translate(0);
     box-shadow: 0;
+  }
+}
+
+.paragraph{
+  &:not(:last-of-type){
+    margin-bottom: 2rem;
+  }
+}
+
+.list{
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  border-block: 1px solid var(--color-grey-light-3);
+  margin-block: 3rem;
+  padding-block: 3rem;
+  &__item{
+    
+    flex: 0 0 50%;
+
+    &::before{
+      content: "";
+      display: inline-block;
+      height: 1rem;
+      width: 1rem;
+      margin-right: .7rem;
+      background-color: var(--color-primary);
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+    }
+  }
+}
+
+.recommend{
+  display: flex;
+  color: var(--color-grey-dark-2);
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 400;
+
+  &__friends{
+    display: flex;
+    margin-right: 1rem;
+  }
+
+  &__photo{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 2px solid white;
+    box-sizing: content-box;
+    margin-right: -10px;
+  }
+}
+ 
+.review{
+  background-color: white;
+  margin-bottom: 3.4rem;
+  padding: 3rem;
+  font-weight: 500;
+  position: relative;
+  overflow: hidden;
+  &__photo{
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+  }
+  &__user-box{
+    margin-right: auto; 
+    margin-left: 1rem;
+    .user-name{
+      font-weight: 600;
+      font-size: 1.3rem;
+      
+      text-transform: uppercase;
+    }
+    .user-date{
+      font-size: 1rem;
+      color: var(--color-grey-dark-2);
+    }
+  }
+  &__user{
+    display: flex; 
+    align-items: center;
+    margin-top: 1rem;
+  }
+  &__rating{
+    color: var(--color-primary);
+    font-size: 2rem;
+  }
+  &::before{
+    content: "\201C"; 
+    line-height: 1 ;
+    position: absolute;
+    display: inline;
+    top: -2rem;
+    left: -1rem;
+    z-index: 1;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+  }
+  &__text{
+    position: relative;
+    z-index: 10;
   }
 }
