--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,6 +1,5 @@
 .container {
-    max-width: 120rem;
-    height: 52rem;
+    max-width: 120rem; 
     background-color: var(--color-grey-light-1);
     margin: 8rem auto;
  
@@ -21,8 +20,7 @@
 .content{
     
     display: flex;
-
-    height: 60rem;
+ 
     
     .sidebar{
         background-color: var( --color-grey-dark-1);
@@ -37,4 +35,27 @@
         background-color: var(--color-grey-light-1);
     }
 
+}
+
+.detail{
+    display: flex;
+    margin: 3rem;
+    font-size: 1.4rem;
+    color: var(--color-grey-dark-1);
+    
+}
+.description{
+    flex: 0 0 60%; 
+    background-color: white;
+    margin-right: 3rem;
+    padding: 3rem;
+    font-weight: 500;
+    box-shadow: 1px 4rem 40rem rgba(black, .15);
+}
+
+.user-review{ 
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
