--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,54 @@ html {
   z-index: 10;
 }
 
+.cta {
+  text-align: center;
+  background-color: white;
+  padding: 3.5rem 0;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 300;
+}
+.cta__text {
+  margin-bottom: 1.5rem;
+}
+
+.btn {
+  background-image: linear-gradient(to right, var(--color-primary), var(--color-primary-light));
+  border: none;
+  padding: 2.5rem 7rem;
+  border-radius: 100px;
+  font-size: 1.8rem;
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+.btn > * {
+  display: inline-block;
+  text-transform: uppercase;
+  width: 100%;
+  height: 100%;
+  transition: all 0.2s;
+}
+.btn__invisible {
+  position: absolute;
+  top: -100%;
+  left: 0;
+  padding: 2.5rem 3rem;
+}
+.btn:hover .btn__visible {
+  transform: translateY(250%);
+}
+.btn:hover .btn__invisible {
+  top: 0;
+}
+.btn:hover {
+  background-image: linear-gradient(to left, var(--color-primary), var(--color-primary-light));
+}
+.btn:focus {
+  animation: pulstate 1s infinite;
+}
+
 .container {
   max-width: 120rem;
   background-color: var(--color-grey-light-1);
