--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -30,11 +30,16 @@ body{
     background-image: linear-gradient(to right bottom  , var(--color-primary-light) , var(--color-primary-dark));
     background-repeat: no-repeat;
     background-size: cover;
+
+   
  
 }
 
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    @include response-to(lg){
+        font-size: 50%;
+    }
 
 }
