--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -2,6 +2,13 @@
     max-width: 120rem; 
     background-color: var(--color-grey-light-1);
     margin: 8rem auto;
+
+    @include response-to(xl){
+        margin: 0;
+    }
+    @include response-to(lg){
+        width: 100%;
+    }
  
 }
 
@@ -13,6 +20,12 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--color-grey-light-1);
+    @include response-to(md){
+        flex-wrap: wrap; 
+
+        height: 10.5rem;
+      
+      }
 
 
 }
@@ -20,7 +33,12 @@
 .content{
     
     display: flex;
- 
+
+    @include response-to(lg){
+        flex-direction: column;
+
+    }
+
     
     .sidebar{
         background-color: var( --color-grey-dark-1);
@@ -28,6 +46,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+     
 
     }
     .hotel-view{ 
@@ -42,6 +62,10 @@
     margin: 3rem;
     font-size: 1.4rem;
     color: var(--color-grey-dark-1);
+    @include response-to(md){
+        flex-direction: column;
+
+    }
     
 }
 .description{
@@ -51,6 +75,11 @@
     padding: 3rem;
     font-weight: 500;
     box-shadow: 1px 4rem 40rem rgba(black, .15);
+    @include response-to(md){
+     margin-right: 0;
+     margin-bottom: 3rem;
+
+    }
 }
 
 .user-review{ 
